# LanguageCoach

./: LICENSE
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/src/application/: __init__.py
backend/src/application/dtos/: __init__.py  use_case_dtos.py
backend/src/application/mappers/: __init__.py  conversation_mapper.py  feedback_mapper.py  message_mapper.py  summary_mapper.py
backend/src/application/use_cases/: __init__.py  conversation_lifecycle.py  conversation_queries.py  create_conversation.py  create_summary.py  feedback.py  send_message.py  speech.py
backend/src/core/: __init__.py  exceptions.py  value_objects.py
backend/src/core/entities/: __init__.py  conversation.py  conversation_summary.py  feedback.py  message.py
backend/src/core/ports/: __init__.py  conversation_partner.py  conversation_repository.py  feedback_provider.py  metrics.py  speech.py  summary_provider.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/adapters/: __init__.py
backend/src/infrastructure/adapters/llm/: __init__.py  models.py  registry.py
backend/src/infrastructure/prompts/: __init__.py  coach_prompts.py  feedback_prompts.py
backend/tests/: conftest.py
backend/tests/unit/application/: __init__.py
backend/tests/unit/application/mappers/: __init__.py  test_conversation_mapper.py  test_feedback_mapper.py  test_message_mapper.py  test_summary_mapper.py
backend/tests/unit/application/use_cases/: conftest.py  test_conversation_lifecycle.py  test_conversation_queries.py  test_create_conversation.py  test_create_summary.py  test_feedback.py  test_send_message.py  test_speech.py
backend/tests/unit/core/entities/: __init__.py  conftest.py  test_conversation.py  test_conversation_summary.py  (+2 more)
(+22 files in other folders)
